--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="jumbotron">
+        <div class="jumbotron mb-2">
             <div class="container">
                 <h1 class="display-4">Northwind</h1>
                 <p class="lead">We have the best prices and selection of high quality foods & beverages on the planet!
@@ -69,6 +69,25 @@
                 <p>For spectacular international quisuine, look no further.</p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Order Now >></a>
             </div>
+        </div>
+    </div>
+
+    <!-- grid -->
+    <div class="row container-fluid">
+        <div class="card col-md p-3 m-1">
+            <h3>Tis the seasoning</h3>
+            <div class="mb-4">
+                Order today! Save 12.5% on Chef Anton's Italian Seasoning.
+                You don't want to make Chef Anton mad, do you?
+            </div>
+            <i>Discount expires: 2/25/2024</i><br />
+            <a href="#">Discount Code</a>
+        </div>
+        <div class="col-md">
+            Col 2
+        </div>
+        <div class="col-md">
+            Col 3
         </div>
     </div>
 
