--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
 </head>
 
 <body>
+    <!-- toast -->
+    <div class="position-fixed bottom-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
+        <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="2000">
+            <div class="toast-header">
+                <strong class="mr-auto">Product Name</strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body">
+                Discount Code: <strong id="code">CODE</strong>
+            </div>
+        </div>
+    </div>
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#"><i class="far fa-compass"></i> Northwind</a>
@@ -81,7 +96,7 @@
                 You don't want to make Chef Anton mad, do you?
             </div>
             <i>Discount expires: 2/25/2024</i><br />
-            <a href="#"><i class="far fa-hand-point-right"></i> Discount Code</a>
+            <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
         </div>
         <div class="col-md">
             Col 2
@@ -98,6 +113,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+    <script src="js/client.js" type="application/javascript"></script>
 
 </body>
 
