--- a/ballooons.html
+++ b/ballooons.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     
+    <div class="container">
+        <h1>Happy Birthday!</h1><hr />
+    </div>
+
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
@@ -18,5 +22,6 @@
     <!-- pickadate -->
     <script src="js/picker.js"></script>
     <script src="js/picker.date.js"></script>
+    <script src="js/balloons.js"></script>
 </body>
 </html>
