Resize grid cards

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <i>Discount expires: 2/25/2024</i><br />
             <a href="#" class="code" data-product="Chef Anton's Italian Seasoning" data-code="1234"><i class="far fa-hand-point-right"></i> Discount Code</a>
         </div>
-        <div class="col-md">
+        <div class="card col-md p-3 m-1">
             <h3>Go Green</h3>
             <div class="mb-4">
                 Genen Shouyu goes on sale very rarely. 
@@ -107,7 +107,7 @@
             <i>Discount expires: 2/25/2019</i><br />
             <a href="#" class="code" data-product="Genen Shouyu" data-code="3367"><i class="far fa-hand-point-right"></i> Discount Code</a>
         </div>
-        <div class="col-md">
+        <div class="card col-md p-3 m-1">
             <h3>Half Price</h3>
             <div class="mb-4">
                 Just because you can't pronounce "Schoggi Schokolade" doesn't mean you shouldn't buy it. 
